add the common config map

--- a/kubernetes/templates/2.rspamd.yaml
+++ b/kubernetes/templates/2.rspamd.yaml
@@ -20,6 +20,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ .Values.name }}
+            - configMapRef:
+                name: {{ .Values.namespace }}
           ports:
             - name: rspamd1
               containerPort: {{ index .Values.port 0 }}
