--- a/kubernetes/templates/0.rspamd.yaml
+++ b/kubernetes/templates/0.rspamd.yaml
@@ -1,9 +1,13 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
 spec:
+  selector:
+    matchLabels:
+      app: {{ .Values.namespace }}
+      role: {{ .Values.name }}
   replicas: 1
   template:
     metadata:
@@ -11,8 +15,6 @@ spec:
         app: {{ .Values.namespace }}
         role: {{ .Values.name }}
     spec:
-      imagePullSecrets:
-        - name: {{ .Values.name }}
       containers:
         - name: {{ .Values.name }}
           image: {{ .Values.repository }}
